--- a/references.bib
+++ b/references.bib
@@ -303,3 +303,24 @@
 
 
 
+
+
+@article{cruaud2017,
+  title = {Open the {{Sterivex}} Casing: {{An}} Easy and Effective Way to Improve {{DNA}} Extraction Yields},
+  shorttitle = {Open the {{SterivexTM}} Casing},
+  author = {Cruaud, Perrine and Vigneron, Adrien and Fradette, Marie-St{\'e}phanie and Charette, Steve J. and Rodriguez, Manuel J. and Dorea, Caetano C. and Culley, Alexander I.},
+  year = {2017},
+  journal = {Limnology and Oceanography: Methods},
+  volume = {15},
+  number = {12},
+  pages = {1015--1020},
+  issn = {1541-5856},
+  doi = {10.1002/lom3.10221},
+  abstract = {We describe an inexpensive, reliable, and easily executed improvement for the extraction of DNA from SterivexTM filter units, that involves the separation of the SterivexTM filter from its casing. Our study demonstrates that our modification of the original extraction protocol significantly increased DNA yields, with an average increase of 4.1-fold more DNA than with the standard approach. A comparison of the diversity after Illumina MiSeq sequencing of bacterial communities extracted with both the standard approach and the proposed one indicated that our modified protocol has no or little impact on the results. This protocol provides a relatively straight forward means to achieve higher yields of DNA from the extraction of SterivexTM cartridges without altering the community composition and will likely be of interest to a wide range of scientists that use techniques based on the recovery of DNA from filters.},
+  langid = {english},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/lom3.10221},
+  file = {/Users/turner/Zotero/storage/673F6YGG/Cruaud et al. - 2017 - Open the SterivexTM casing An easy and effective .pdf;/Users/turner/Zotero/storage/VIS8GCPE/lom3.html}
+}
+
+
+
