--- a/habbsed-dibformat-ms.Rmd
+++ b/habbsed-dibformat-ms.Rmd
@@ -6,8 +6,14 @@ biblio-style: unsrt
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+options(scipen=999)
+
 library("tidyverse")
 library("kableExtra")
+
+#Read in sample data
+samp_dat <- read_csv(here::here("data","supplemental_table_S1_sampledata.csv"))
+
 ```
 
 # Article information
@@ -45,18 +51,18 @@ Here we describe a publicly available environmental DNA (eDNA) sequence dataset,
 
 # Specifications table
 
-
+\renewcommand{\arraystretch}{2}
 ```{r spectab, echo=FALSE}
 
 #Set bullet lists
 #dtype_bulletlist <- "$\\boldsymbol{\\cdot}$ Raw Metagenomic Data\n $\\boldsymbol{\\cdot}$ Table\n $\\boldsymbol{\\cdot}$ Image"
 subject <- "Environmental Genomics and Metagenomics"
 sub_area <- "Metagenomic analysis of freshwater microbes associated with harmful algal blooms"
-#dtype <- "$\\boldsymbol{\\cdot}$ Raw Metagenomic Data"
-d_type <- "Raw Metagenomic Data"
+d_type <- "$\\boldsymbol{\\cdot}$ Raw Metagenomic Data\n $\\boldsymbol{\\cdot}$ Metadata Table\n $\\boldsymbol{\\cdot}$ Figure"
+#d_type <- "Raw Metagenomic Data"
 d_acq <- "Freshwater eDNA samples collected from Lake Erie GLERL"
 d_format <- "Raw data (fastq.gz.file)"
-d_coll <- "DNeasy PowerWater® isolation kit was used to extract DNA from the water samples.  DNA was then sequences using the Oxford Nanopore MinION® device."
+d_coll <- "DNeasy PowerWater® isolation kit was used to extract DNA from the water samples.  DNA was then sequenced using the Oxford Nanopore MinION® device."
 d_loc <- 	"Lake Erie NOAA GLERL stations WE13 and WE02. Latitude (approx.) 42.07 N Longitude (approx.) 81.34 W."
 d_acc <- "The raw sequences have been deposited in the NCBI Sequence Read Archive (SRA) under accession number PRJNA812770."
 
@@ -70,9 +76,10 @@ spec_tbl[4, 1] <- cell_spec(spec_tbl[4, 1], "latex", bold=T)
 #Kable styling
 spec_tbl %>% 
   mutate_all(linebreak) %>%
-  knitr::kable(escape=F, col.names=NULL) %>%
-  column_spec(1, border_left = TRUE, bold=T) %>%
-  column_spec(2, border_right = TRUE, width = "30em") 
+  knitr::kable(escape=F, col.names=NULL, booktabs = TRUE) %>%
+  column_spec(1, bold=T, width = "10em") %>%
+  column_spec(2, width = "30em") #%>%
+  #kable_styling(latex_options = "striped")
   
 ```
 
@@ -80,11 +87,39 @@ spec_tbl %>%
 # Value of the data
 
 * The data provide a snapshot of the microbiota present before and during a *Microcystis* bloom.
-* Understanding the taxonomic makeup of the freshwater micorbiome can give us insights into the dynamics of bloom formation.
+* Harmful algal blooms, including *Microcystis* cause significant harm to human health and local economies.
+* Understanding the taxonomic makeup of the freshwater microbiome can give us insights into the dynamics of bloom formation.
 * Any stakeholders interested in the dynamics of HABs in general, and *Microcystis* blooms specifically may find these data to be of value.
 
 # Data Description
 
+This dataset consists of raw eDNA reads from before and during a *Microcystis* bloom.  The DNA was sequenced using the ONT MinION, and reads were classified taxonomically using the ONT What's In My Pot (WIMP) pipeline.  The complete dataset (all reads passing MinION QC) numbered `r samp_dat %>% pull(read_qcpass) %>% sum()` reads. Of these, `r samp_dat %>% pull(reads_classified) %>% sum()` were successfully taxonomically classified.
+Table 1 provides a subset of the metadata associated with these samples, including the GLERL from which the sample was drawn, the date of sampling, bloom condition at the time of sampling, and DNA concentration. Because some samples were sequenced as a single run, and others as part of a multiplexed run, the multiplexing information is also included. The full metadata is available on the SRA bioproject page.
+
+\small
+
+```{r sampletable, echo=FALSE}
+read_csv(here::here("data/manifest.csv"), col_types="cDccccciciiic") %>% 
+  select(sample:samples_on_cell) %>% 
+  rename(`# Multiplexed`=samples_on_cell) %>% 
+  arrange(run_date) %>% 
+  select(-protocol) %>% 
+  mutate(run_type=stringr::str_to_sentence(run_type)) %>% 
+  mutate(condition=stringr::str_to_sentence(condition)) %>% 
+  rlang::set_names(stringr::str_replace_all, "_", " ") %>% 
+  rlang::set_names(stringr::str_to_sentence) %>% 
+  rename(`Input (ng/uL)`=`Qbit ng ul`) %>% 
+  rename(GLERL=Glerl) %>% 
+  kable(caption="Subset of the available metadata about samples sequenced in this study, available at SRA accession number PRJNA812770.", booktabs = TRUE)
+```
+
+The results of the taxonomic classification are presented in \ref{fig:taxa}. 
+
+```{r taxa, echo = FALSE, fig.cap="Stacked bar charts of relative taxon abundance (genus level) for all samples in the dataset."}
+
+
+
+```
 
 # Experimental design, materials and methods
 
@@ -94,7 +129,22 @@ We collected water samples from NOAA GLERL stations WE02 and WE13 during a 2019 
 knitr::include_graphics(here::here("figures/map2.jpg"))
 ```
 
-Biomass was collected onto 0.2 um Sterivex filters and kept on ice until they were returned to the lab where they were stored at -80C until extraction. Extraction protocol was adapted according to [@cruaud2017]. We then prepared the libraries for MinION sequencing using Oxford Nanopore Technologies (ONT) sequencing kit (initially the Rapid Sequencing Kit (SQK-RAD004) but transitioning to the Rapid Barcoding Kit 96 (SQK-RBK110.96) for later runs). We sequenced the eDNA from those samples using the ONT MinION Mk1C device, which performed base-calling and quality filtering using ONT's embedded MinKNOW software using the default settings. We then performed taxonomic classification using the ONT What's In My Pot (WIMP) pipeline and counted the abundance of *Microcystis* reads, as well as species and strains within the *Microcystis* genus where possible. We computed the relative abundance by dividing these counts by the total number of reads passing the QC filters for the same samples.
+Biomass was collected onto 0.2 um Sterivex filters and kept on ice until they were returned to the lab where they were stored at -80C until extraction. Extraction protocol was adapted according to [@cruaud2017]. We then prepared the libraries for MinION sequencing using Oxford Nanopore Technologies (ONT) sequencing kit (initially the Rapid Sequencing Kit (SQK-RAD004) but transitioning to the Rapid Barcoding Kit 96 (SQK-RBK110.96) for later runs). DNA cocentrations for each sample were estimated using a Qbit analyzer.  We sequenced the eDNA from those samples using the ONT MinION Mk1C device, which performed base-calling and quality filtering using ONT's embedded MinKNOW software using the default settings. We then performed taxonomic classification using the ONT What's In My Pot (WIMP) pipeline and counted the abundance of *Microcystis* reads, as well as species and strains within the *Microcystis* genus where possible. We computed the relative abundance by dividing these counts by the total number of reads passing the QC filters for the same samples.
+
+# Ethics Statements
+
+The authors declare no financial or commercial conflicts of interest.  
+<!-- fixme: Just a placeholder because I don't think this is true  We're trying to make a commercial pipeline out of this.  I assume that counts as a financial interest? -->
+
+# CRediT author statement
+
+**Alex Koeppel**: Performed sequencing and conducted all data analysis. **Will Goodrum, Morgan Steffen, Louie Wurch, Stephen D. Turner**: Contributed to study design, results interpretation, and drafting and reviewing the manuscript.
+
+# Acknowledgements
+
+The authors would like to express sincere gratitude and acknowledge Jessica Bouchet, David Russell, and Hunter Baylous for assisting with laboratory work on this project, and Dr. Stephanie Guertin for consultation on design and execution.
+
+This material is based upon work supported by the SBIR Program within the NOAA Technology Partnerships Office under Grant No. NA21OAR0210481.
 
 
 # References
