--- a/references.bib
+++ b/references.bib
@@ -322,5 +322,20 @@
   file = {/Users/turner/Zotero/storage/673F6YGG/Cruaud et al. - 2017 - Open the SterivexTM casing An easy and effective .pdf;/Users/turner/Zotero/storage/VIS8GCPE/lom3.html}
 }
 
+@article{rteam2021,
+  title = {R: A language and environment for statistical computing.},
+  author = {Core Team R},
+  editor = {},
+  year = {2021},
+  month = {},
+  journal = {R Foundation for Statistical Computing},
+  volume = {Vienna, Austria},
+  number = {},
+  pages = {},
+  issn = {},
+  url = {https://www.R-project.org/},
+  langid = {english},
+  file = {}
+}
 
 
