--- a/habbsed-dibformat-word-ms.Rmd
+++ b/habbsed-dibformat-word-ms.Rmd
@@ -35,9 +35,9 @@ Alexander F. Koeppel^1^, Will Goodrum^2^, Morgan Steffen^3^, Louie Wurch^3^, Ste
 
 ## Affiliations
 
-1. Signature Science LLC: Charlottesville Office, 1670 Discovery Drive, Suite 240, Charlottesville, VA 22911
-1. General Atomics - Commonwealth Computer Research, Inc. (GA-CCRi): 1440 Sachem Pl.,  Charlottesville, VA 22901
-1. James Madison University: Bioscience Building, MSC 7801, 951 Carrier Drive, Room 2001, Harrisonburg, Virginia 22807
+1. Signature Science, LLC: 8329 N. Mopac Expressway, Austin, TX 78759.
+1. Elder Research: 300 W Main St STE 301, Charlottesville, VA 22903.
+1. James Madison University: Bioscience Building, MSC 7801, 951 Carrier Drive, Room 2001, Harrisonburg, Virginia 22807.
 
 ## Corresponding author’s email address and Twitter handle
 
